<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_title"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label2"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#333"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernamelabel"
            android:text="@string/username_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameshow"
            android:layout_toRightOf="@id/usernamelabel"
            android:layout_alignBaseline="@id/usernamelabel"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userpwdlabel"
            android:text="@string/userpwd_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userpwdshow"
            android:layout_toRightOf="@id/userpwdlabel"
            android:layout_alignBaseline="@id/userpwdlabel"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usersexlabel"
            android:text="@string/usersex_label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usersexshow"
            android:layout_toRightOf="@id/usersexlabel"
            android:layout_alignBaseline="@id/usersexlabel"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userlovelabel"
            android:text="@string/userlove_label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userloveshow"
            android:layout_toRightOf="@id/userlovelabel"
            android:layout_alignBaseline="@id/userlovelabel"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userjoblabel"
            android:text="@string/userjob_label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userjobshow"
            android:layout_toRightOf="@id/userjoblabel"
            android:layout_alignBaseline="@id/userjoblabel"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthdaylabel"
            android:text="@string/birthday_label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userbirthdayshow"
            android:layout_toRightOf="@id/birthdaylabel"
            android:layout_alignBaseline="@id/birthdaylabel"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:id="@+id/confirmbt"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/back"
            android:id="@+id/backbt"
            android:layout_toRightOf="@id/confirmbt"/>"
    </RelativeLayout>

</LinearLayout>