<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_title"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#333"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernamelabel"
            android:text="@string/username_label"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/username"
            android:layout_toRightOf="@id/usernamelabel"
            android:layout_alignBaseline="@id/usernamelabel"
            android:singleLine="true"
            android:background="@drawable/input_bg"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userpwdlabel"
            android:text="@string/userpwd_label"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/userpwd"
            android:layout_toRightOf="@id/userpwdlabel"
            android:layout_alignBaseline="@id/userpwdlabel"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@drawable/input_bg"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usersexlabel"
            android:text="@string/usersex_label"
            />
        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/usersexlabel"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/femaleButton"
                android:text="@string/female"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/maleButton"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RadioGroup>
    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lovelabel"
            android:text="@string/userlove_label"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="请选择.."
            android:textSize="12dp"
            android:textColor="#666"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/userlove"
            android:layout_toRightOf="@id/lovelabel"
            android:layout_alignBaseline="@id/lovelabel"
            android:singleLine="true"
            android:background="@drawable/input_bg"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userjoblabel"
            android:text="@string/userjob_label"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="请选择.."
            android:textSize="12dp"
            android:textColor="#666"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/userjob"
            android:layout_toRightOf="@id/userjoblabel"
            android:layout_alignBaseline="@id/userjoblabel"
            android:singleLine="true"
            android:background="@drawable/input_bg"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthdaylabel"
            android:text="@string/birthday_label"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="1900-01-01"
            android:textSize="12dp"
            android:textColor="#666"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/userbirthday"
            android:layout_toRightOf="@id/birthdaylabel"
            android:layout_alignBaseline="@id/birthdaylabel"
            android:singleLine="true"
            android:background="@drawable/input_bg"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lovebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/readbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="阅读注册协议"/>
        <CheckBox
            android:id="@+id/readck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="已阅读注册协议"
            android:layout_toRightOf="@id/readbt"
            />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bttxt03"
        android:id="@+id/submitbt"
        android:enabled="false"/>


</LinearLayout>
