<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="16sp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_chat_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/tab_chat_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_icon_chat_selector"
                />

            <TextView
                android:id="@+id/tab_chat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_chat"
                android:textColor="@drawable/tab_textcolor_selector"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_contacts_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/tab_contacts_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_icon_contacts_selector"/>

            <TextView
                android:id="@+id/tab_contacts_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_contacts"
                android:textColor="@drawable/tab_textcolor_selector"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_discover_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/tab_discover_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_icon_discover_selector"/>

            <TextView
                android:id="@+id/tab_discover_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_discover"
                android:textColor="@drawable/tab_textcolor_selector"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_mine_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/tab_mine_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_icon_mine_selector"/>

            <TextView
                android:id="@+id/tab_mine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_mine"
                android:textColor="@drawable/tab_textcolor_selector"
                android:textSize="15dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>